--- a/monitoramento/templates/monitoramento/maquina.html
+++ b/monitoramento/templates/monitoramento/maquina.html
@@ -5,17 +5,20 @@
 
     {% block 'importacoes' %}{% endblock %}
     <link href="{% static 'css/monitoramento.css' %}" rel="stylesheet">
+    <script src="{% static 'js/timer.js' %}"></script>
+
     
 {% endblock %}
 
 {% block 'conteudo' %}
 
-<div class="container-fluid px-4">    
+<div class="container-fluid px-4">
     <div class="row text-center">
-        <div class="col-12 maquina-cor-vermelho d-flex align-items-center justify-content-center" style="height:450px">
-            Parada
+        <div id="conteudoMaquina" class="d-flex align-items-center justify-content-center" style="height:450px; font-size: 100px">
+
         </div>
     </div>
+</div>
 
     <div class="row gap-3">
         <!--Indicadores da OF-->
@@ -141,6 +144,43 @@
         </div>
 
         <!-- Modal Código Parada-->
+<!--        <div id="codigoparada" class="modal fade">-->
+<!--            <div class="modal-dialog modal-dialog-centered" role="document">-->
+<!--                <div class="modal-content">-->
+<!--                    <div class="modal-header">-->
+<!--                        <h1 class="modal-title">Código Parada</h1>-->
+<!--                        <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>-->
+<!--                    </div>-->
+<!--                    <div class="modal-body text-color-black">-->
+<!--                        <h2>Selecione a parada desejada.</h2>-->
+<!--                        <select class="form-select">-->
+<!--                            <option></option>-->
+<!--                            <option style="background-color: #38761d" id="producao">PRODUÇÃO</option>-->
+<!--                            <option style="background-color: #ffff00" id="aguar_liberacao">AGUARDANDO LIBERAÇÃO</option>-->
+<!--                            <option style="background-color: #990000" id="prepa_Maquina">PREPARAÇÃO DE MÁQUINA</option>-->
+<!--                            <option style="background-color: #990000" id="stand_by">MÁQUINA EM STAND BY</option>-->
+<!--                            <option style="background-color: #990000" id="afiacao">AFIAÇÃO DE FERRAMENTA</option>-->
+<!--                            <option style="background-color: #990000" id="falta_ferramenta">FALTA DE FERRAMENTA</option>-->
+<!--                            <option style="background-color: #990000" id="falta_programada">FALTA DE PROGRAMADOR</option>-->
+<!--                            <option style="background-color: #990000" id="falta_operador">FALTA DE OPERADOR</option>-->
+<!--                            <option style="background-color: #990000" id="limpeza">LIMPEZA</option>-->
+<!--                            <option style="background-color: #990000" id="manutencao">MANUTENÇÃO</option>-->
+<!--                            <option style="background-color: #990000" id="ajuste">AJUSTE DE MÁQUINA</option>-->
+<!--                            <option style="background-color: #990000" id="falta_materia">FALTA DE MATÉRIA PRIMA</option>-->
+<!--                            <option style="background-color: #990000" id="falta_energia">FALTA DE ENERGIA</option>-->
+<!--                            <option style="background-color: #666666" id="intervalo">INTERVALO</option>-->
+<!--                            <option style="background-color: #a64d79" id="try_out">TRY OUT</option>-->
+<!--                            <option style="background-color: #0b5394" id="treinamento">TREINAMENTO</option>-->
+<!--                        </select>-->
+<!--                        <br>-->
+<!--                    </div>                -->
+<!--                    <div class="modal-footer">-->
+<!--                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="save">Salvar</button>-->
+<!--                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="close">Fechar</button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div id="codigoparada" class="modal fade">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -150,35 +190,22 @@
                     </div>
                     <div class="modal-body text-color-black">
                         <h2>Selecione a parada desejada.</h2>
-                        <select class="form-select">
+                        <select id="corParada" class="form-select">
                             <option></option>
-                            <option style="background-color: #38761d">PRODUÇÃO</option>
-                            <option style="background-color: #ffff00">AGUARDANDO LIBERAÇÃO</option>
-                            <option style="background-color: #990000">PREPARAÇÃO DE MÁQUINA</option>
-                            <option style="background-color: #990000">MÁQUINA EM STAND BY</option>
-                            <option style="background-color: #990000">AFIAÇÃO DE FERRAMENTA</option>
-                            <option style="background-color: #990000">FALTA DE FERRAMENTA</option>
-                            <option style="background-color: #990000">FALTA DE PROGRAMADOR</option>
-                            <option style="background-color: #990000">FALTA DE OPERADOR</option>
-                            <option style="background-color: #990000">LIMPEZA</option>
-                            <option style="background-color: #990000">MANUTENÇÃO</option>                            
-                            <option style="background-color: #990000">AJUSTE DE MÁQUINA</option>
-                            <option style="background-color: #990000">FALTA DE MATÉRIA PRIMA</option>
-                            <option style="background-color: #990000">FALTA DE ENERGIA</option>                            
-                            <option style="background-color: #666666">INTERVALO</option>
-                            <option style="background-color: #a64d79">TRY OUT</option>
-                            <option style="background-color: #0b5394">TREINAMENTO</option>                            
+                            <option data-text="PRODUÇÃO" style="background-color: #38761d" value="#38761d">PRODUÇÃO</option>
+                            <option data-text="AGUARDANDO LIBERAÇÃO" style="background-color: #ffff00" value="#ffff00">AGUARDANDO LIBERAÇÃO</option>
+                            <option data-text="PARADA" style="background-color: #990000" value="#990000">PARADA</option>
+                            <!-- Resto das opções omitidas para brevidade -->
                         </select>
                         <br>
-                    </div>                
+                    </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Salvar</button>
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="save">Salvar</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="close">Fechar</button>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- Modal Lançar Produção-->
         <div id="lancarproducao" class="modal fade">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -192,7 +219,7 @@
                             <label>quantidade produzida</label>
                             <input type="text" class="form-control" placeholder="Quantidade produzida..." name="quantidadeproduzida">
                             <br>
-                    </div>                
+                    </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Salvar</button>
                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
@@ -294,7 +321,7 @@
                 <div class="col">00:00:00</div>
                 <div class="col">00:00:00</div>
                 <div class="col">00:00:00</div>
-                <div class="col">00:00:00</div>            
+                <div class="col">00:00:00</div>
             </div>
             <div class="row" style="height: calc(50% / 6)">
                 <div class="col">0%</div>
