--- a/monitoramento/templates/monitoramento/base_monitoramento.html
+++ b/monitoramento/templates/monitoramento/base_monitoramento.html
@@ -91,5 +91,6 @@
        
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!--        <script src="{% static 'js/timer.js' %}"></script>-->
   </body>
 </html>
