--- a/monitoramento/templates/monitoramento/monitoramento.html
+++ b/monitoramento/templates/monitoramento/monitoramento.html
@@ -5,6 +5,8 @@
 
     {% block 'importacoes' %}{% endblock %}
     <link href="{% static 'css/monitoramento.css' %}" rel="stylesheet">
+<!--    <script src="{% static 'js/timer.js' %}"></script>-->
+
     
 {% endblock %}
 
@@ -14,7 +16,7 @@
 <div class="container-fluid text-center">
   <div class="row gap-2 p-2 pb-5 align-items-start">  
     <!-- cor no monitoramento.css -->        
-    <div class="col-md monitoramento-cor-verde"> 
+    <div class="col-md monitoramento-cor-verde" id="prod_green">
       Produção
     </div>
     <div class="col-md monitoramento-cor-amarelo">
@@ -62,7 +64,7 @@
         </div>
         <div class="row" style="height: calc(100% / 8)">
           <div class="col-md d-flex align-items-center justify-content-center cor-azul">100%</div>
-          <div class="col-md d-flex align-items-center justify-content-center cor-azul">00:00:00</div>
+          <div class="col-md d-flex align-items-center justify-content-center cor-azul">10:00:00</div>
         </div>
         <div class="row d-flex align-items-center justify-content-center" style="height: calc(200% / 8)">
           00:00:00
@@ -98,7 +100,6 @@
 
   </div>  
 </div>
-
 
 
 {% endblock %}
